# compare-files

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
gendiff/: __init__.py  build_diff.py  builder.py  constants.py  generate.py  parser_input.py
gendiff/format/: __init__.py  get_format.py  json.py  plain.py  string.py
gendiff/scripts/: gendiff.py
gendiff_package/scripts/: gendiff.py
tests/: expected.py  test_generate_diff.py  test_json_diff.py  test_yaml_diff.py
