[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Olga <ol.nevskaya@mail.ru>"]
packages = [
  { include = "gendiff_package" },
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff_package.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
